sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:11: error: value i is not a member of AnyVal
possible cause: maybe a semicolon is missing before `value i'?
 } }i=i-1}
    ^